--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <link rel="stylesheet" href="Css/normalize.css" />
     <!-- font awesome  -->
     <link rel="stylesheet" href="Css/all.min.css" />
-    <!-- media quiery  -->
-    <link rel="stylesheet" href="Css/media.css" />
+
     <!-- style css -->
     <link rel="stylesheet" href="Css/style.css" />
+    <!-- media quiery  -->
+    <link rel="stylesheet" href="Css/media.css" />
     <!-- ------------------------------------------------------------------------ -->
   </head>
   <body>
@@ -32,6 +33,7 @@
           <img src="photo/logo (1).png" alt="logo" />
         </a>
         <nav>
+          <i class="fas fa-bars toggle-menu"></i>
           <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Services</a></li>
@@ -47,5 +49,33 @@
       </div>
     </header>
     <!-- End header -->
+    <!-- Start Landing  -->
+    <section>
+      <div class="landing">
+        <div class="overlay"></div>
+        <div class="text">
+          <div class="content">
+            <h2>
+              Hello world! <br />
+              We are kasper We make art .
+            </h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+              sem. Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+        </div>
+        <i class="fas fa-angle-left left change-background fa-2x"></i>
+        <i class="fas fa-angle-right right change-background fa-2x"></i>
+        <ul class="bullets">
+          <li></li>
+          <li class="active"></li>
+          <li></li>
+        </ul>
+      </div>
+    </section>
+    <!-- End Landing  -->
   </body>
 </html>
