--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- ------------------------------------------------------------------------ -->
   </head>
   <body>
-    <!-- start header -->
+    <!-- ----------------start header ---------------------------------------------------->
     <header>
       <div class="container">
         <a href="#logo" class="logo">
@@ -48,8 +48,8 @@
         </nav>
       </div>
     </header>
-    <!-- End header -->
-    <!-- Start Landing  -->
+    <!-- ----------------End header ------------------------------------------------->
+    <!-- ------------Start Landing ----------------------------------------------- -->
     <section>
       <div class="landing">
         <div class="overlay"></div>
@@ -76,8 +76,8 @@
         </ul>
       </div>
     </section>
-    <!-- End Landing  -->
-    <!-- Start Services -->
+    <!-- ----------End Landing  --------------------------------------------------------->
+    <!-- ---------Start Services -------------------------------------------->
     <section>
       <div class="services">
         <div class="container">
@@ -137,6 +137,108 @@
         </div>
       </div>
     </section>
-    <!-- End Services -->
+    <!-- ----------End Services ---------------------------------------------->
+    <!-- ------Start Design------------------------------------------ -->
+    <section>
+      <div class="design">
+        <div class="image-design">
+          <img src="photo/mobile.png" alt="Mobile" />
+        </div>
+        <div class="text">
+          <h2>Our design comes with</h2>
+          <ul>
+            <li>Responsive Design</li>
+            <li>Modern and clean design</li>
+            <li>clean code</li>
+            <li>Browser friendly</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- ------End Design section -----------------------------  -->
+    <!-- ------start Portfolio section -----------------------------  -->
+    <section>
+      <div class="portfolio">
+        <div class="container">
+          <div class="main-heading">
+            <h2>Portfolio</h2>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+          </div>
+          <div class="shuffle">
+            <ul>
+              <li class="active">All</li>
+              <li>photo</li>
+              <li>web</li>
+              <li>App</li>
+              <li>Print</li>
+            </ul>
+          </div>
+        </div>
+        <div class="images">
+          <div class="box">
+            <img src="photo/shuffle-01.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-02.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-03.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-04.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-05.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-06.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-07.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="photo/shuffle-08.jpg" alt="" />
+            <div class="caption">
+              <h4>Awesomee Image</h4>
+              <p>photography</p>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="more">More</a>
+      </div>
+    </section>
+
+    <!-- ------End Portfolio section -----------------------------  -->
   </body>
 </html>
