--- a/index.html
+++ b/index.html
@@ -240,5 +240,19 @@
     </section>
 
     <!-- ------End Portfolio section -----------------------------  -->
+    <!-- ------Start video section -----------------------------  -->
+    <section>
+      <div class="video">
+        <video autoplay muted loop>
+          <source src="photo/awesome-video.mp4" type="video/mp4" />
+        </video>
+        <div class="text">
+          <h2>Super Awesome video here</h2>
+          <p>Its All You Need</p>
+          <a href="#" class="see-more">See more</a>
+        </div>
+      </div>
+    </section>
+    <!-- ------End video section -----------------------------  -->
   </body>
 </html>
